feat: 6주차 미션 수정2